# cli

./: Cargo.toml  README.md
.github/workflows/: cli.yml  release.yml
docs/: README.md
scripts/: install.sh
src/: cli.rs  credentials.rs  lib.rs  main.rs
