[package]
name = "catalysis"
version = "0.1.0"
edition = "2021"
author = "pedro@catalysis.dev"

[dependencies]
keyring = {version =  "^1.2"}
serde_json = { version = "^1.0.82" }
serde = { version = "1.0.139", features = ["derive"] }
clap = {version = "^3.2.12", features = ["derive", "cargo"]}

[dev-dependencies]
mockall = {version = "0.11.1"}